--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+li {
+  background-color: rgb(68, 37, 60);
+  color: #f9f9f9;
+}
 a {
   font-weight: 500;
   color: #646cff;
@@ -51,7 +55,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+
   cursor: pointer;
   transition: border-color 0.25s;
 }
